--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula Virtual</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo">
+            <img src="{{ url_for('static', filename='img/aulavirtual.png') }}" alt="Logo Aula Virtual" class="logo">
             <nav>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Perfil</a></li>
-                    <li><a href="#">Salir</a></li>
+                    <li><a href="{{ url_for('index') }}">Inicio</a></li>
+                    <li><a href="{{ url_for('courses') }}">Cursos</a></li>
+                    <li><a href="{{ url_for('profile') }}">Perfil</a></li>
+                    {% if current_user.is_authenticated %}
+                        <li><a href="{{ url_for('logout') }}">Salir</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}">Iniciar Sesión</a></li>
+                    {% endif %}
                 </ul>
             </nav>
         </div>
