--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,7 @@
                         <li><a href="{{ url_for('logout') }}">Salir</a></li>
                     {% else %}
                         <li><a href="{{ url_for('login') }}">Iniciar Sesión</a></li>
+                        <li><a href="{{ url_for('sign_in') }}">registrarse</a></li>
                     {% endif %}
                 </ul>
             </nav>
