--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="{{ url_for('static', filename='img/aulavirtual.png') }}" alt="Logo Aula Virtual" class="logo">
+            <img src="{{ url_for('static', filename='img/aula.png') }}" alt="Logo Aula Virtual" class="logo">
             <nav>
                 <ul>
                     <li><a href="{{ url_for('index') }}">Inicio</a></li>
