--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es">  "che saco la autentificacion pq la verdad es que no la necesitamos"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,6 +95,9 @@
                 <div>
                     {{ form.submit(class="btn") }}
                 </div>
+                <div> <a href="{{ url_for('sign_in') }}">registrate </div>
+
+                </a> 
             </form>
         </section>
     </main>
