--- a/app/templates/sign_in.html
+++ b/app/templates/sign_in.html
@@ -76,24 +76,29 @@
 <body>
     <div class="container">
         <h1>Registro</h1>
-        <form method="POST" action="">
+        <form method="POST" action="{{ url_for('sign_in') }}">
             {{ form.hidden_tag() }}
-            <div>
-                {{ form.username.label }} 
-                {{ form.username }}
+            <div class="form-group">
+                {{ form.username.label(class="form-label") }}
+                {{ form.username(class="form-control") }}
             </div>
-            <div>
-                {{ form.password.label }} 
-                {{ form.password }}
+            <div class="form-group">
+                {{ form.password.label(class="form-label") }}
+                {{ form.password(class="form-control") }}
             </div>
-            <div>
-                {{ form.confirm_password.label }} 
-                {{ form.confirm_password }}
+            <div class="form-group">
+                {{ form.confirm_password.label(class="form-label") }}
+                {{ form.confirm_password(class="form-control") }}
             </div>
-            <div>
-                {{ form.submit(class_="btn-submit") }}
+            <div class="form-group">
+                {{ form.role.label(class="form-label") }}
+                {{ form.role(class="form-control") }}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-primary") }}
             </div>
         </form>
+        
     </div>
 </body>
 </html>
