--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -53,7 +53,7 @@
         }
 
         input:focus {
-            border-color: #007bff;
+            border-color: #46709c;
             outline: none;
         }
 
@@ -82,8 +82,6 @@
     <main class="container">
         <section class="hero">
             <h1>Iniciar Sesión</h1>
-
-            
             <form method="POST" action="{{ url_for('login') }}">
                 {{ form.hidden_tag() }}
                 <div>
