--- a/app/templates/courses.html
+++ b/app/templates/courses.html
@@ -10,8 +10,9 @@
 <body>
     
     <div id="calendar"></div>
-    <li><a href="{{ url_for('add_course') }}">Cursos</a></li>
+    <li><a href="{{ url_for('add_course') }}">Calendario</a></li>
     <a href="{{ url_for('view_tarea', course_id=1) }}" class="btn-task">Ver Tareas</a>
+
     <!-- Scripts de FullCalendar -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
