--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -15,8 +15,23 @@ body {
 header {
     background-color: #007bff;
     color: white;
-    padding: 20px 0;
+    padding: 10px 0;
 }
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav ul {
+    list-style: none;
+}
+
+header nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
 
 .container {
     width: 90%;
@@ -261,10 +276,10 @@ nav ul li a:hover {
 
 footer {
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
     background-color: #007bff;
     color: white;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
 }
@@ -306,6 +321,28 @@ footer p {
 .materia-card .btn:hover {
     background: #555;
 }
+.materias {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.materia {
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    margin: 10px;
+    padding: 15px;
+    width: 30%; /* Cambia según tus necesidades */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.materia h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
 
 /* Responsive */
 @media (max-width: 768px) {
