--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,7 +47,7 @@
                     <div class="course-info">
                         <h2>Economía</h2>
                         <p>Prof. Díaz - Martes 14:00 - 16:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=2) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_economia', course_id=2)}}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Educación Física -->
@@ -56,7 +56,7 @@
                     <div class="course-info">
                         <h2>Educación Física</h2>
                         <p>Prof. Pérez - Miércoles 08:00 - 10:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=3) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_educacion_fisica', course_id=3) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Filosofía -->
@@ -65,7 +65,7 @@
                     <div class="course-info">
                         <h2>Filosofía</h2>
                         <p>Prof. Fernández - Viernes 12:00 - 14:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=4) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_filosofia', course_id=4) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Historia -->
@@ -74,7 +74,7 @@
                     <div class="course-info">
                         <h2>Historia</h2>
                         <p>Prof. Rodríguez - Jueves 10:00 - 12:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=5) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_historia', course_id=5) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Inglés -->
@@ -83,7 +83,7 @@
                     <div class="course-info">
                         <h2>Inglés</h2>
                         <p>Prof. Smith - Lunes 16:00 - 18:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=6) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_ingles', course_id=6) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Tecnología -->
@@ -92,7 +92,7 @@
                     <div class="course-info">
                         <h2>Tecnología</h2>
                         <p>Prof. Martínez - Miércoles 14:00 - 16:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=7) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_tecnologia', course_id=7) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Lengua -->
@@ -101,7 +101,7 @@
                     <div class="course-info">
                         <h2>Lengua</h2>
                         <p>Prof. López - Martes 08:00 - 10:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=8) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_lengua', course_id=8) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Matemáticas -->
@@ -110,7 +110,7 @@
                     <div class="course-info">
                         <h2>Matemáticas</h2>
                         <p>Prof. Sánchez - Lunes 12:00 - 14:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=9) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_matematicas', course_id=9) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Química -->
@@ -119,7 +119,7 @@
                     <div class="course-info">
                         <h2>Química</h2>
                         <p>Prof. Castro - Jueves 14:00 - 16:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=10) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_quimica', course_id=10) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
                 <!-- Curso de Física -->
@@ -128,7 +128,7 @@
                     <div class="course-info">
                         <h2>Física</h2>
                         <p>Prof. Morales - Viernes 08:00 - 10:00</p>
-                        <a href="{{ url_for('view_tarea', course_id=11) }}" class="btn-task">Ver Tareas</a>
+                        <a href="{{ url_for('tareas_fisica', course_id=11) }}" class="btn-task">Ver Tareas</a>
                     </div>
                 </div>
             </div>
